Bug 294377 - Preview show in folder view settings work backwards
Summary: Preview show in folder view settings work backwards
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-folderview (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-18 16:35 UTC by Luke
Modified: 2012-02-26 09:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2012-02-18 16:35:51 UTC
Version:           unspecified (using KDE 4.8.0) 
OS:                Linux

Show previews in folder view settings doesn't show previews if enabled, and does show previews if disabled. It might look ok because by default is enabled and does showing previews but if you switch this on and off it's going to confuse itself

Folder view -> right mouse click -> folder view settings -> display -> previews

Reproducible: Always

Steps to Reproduce:
Folder view -> right mouse click -> folder view settings -> display -> previews disable and enable again 


Expected Results:  
It should work as it supposed to ;)
Comment 1 Luke 2012-02-19 10:37:27 UTC
i noticed type change, don't know if it's correct cause I meant desktop type folder view (aka desktop with icons on it not plasmoids) not widget "folderview"
Comment 2 Ignat Semenov 2012-02-23 12:10:00 UTC
Yes it's correct, it's technically the same thing.
Comment 3 Ignat Semenov 2012-02-25 12:35:27 UTC
Git commit 0a24ae1bee2a14dcc831a402f3edcd39707945a5 by Ignat Semenov.
Committed on 25/02/2012 at 13:33.
Pushed by isemenov into branch 'master'.

properly handle the m_showPreviews setting in configChanged() and configAccepted()
FIXED-IN:4.8.1

M  +16   -20   plasma/applets/folderview/folderview.cpp

http://commits.kde.org/kde-baseapps/0a24ae1bee2a14dcc831a402f3edcd39707945a5
Comment 4 Ignat Semenov 2012-02-25 12:36:19 UTC
Git commit efc2fab8f6adcdaa881dc49e417e391012d914cb by Ignat Semenov.
Committed on 25/02/2012 at 13:33.
Pushed by isemenov into branch 'KDE/4.8'.

properly handle the m_showPreviews setting in configChanged() and configAccepted()
FIXED-IN:4.8.1

M  +16   -20   plasma/applets/folderview/folderview.cpp

http://commits.kde.org/kde-baseapps/efc2fab8f6adcdaa881dc49e417e391012d914cb
Comment 5 David Faure 2012-02-26 09:24:29 UTC
Git commit 76c7ecea3d2cc7c172dd120050fedefcb27651ac by David Faure.
Committed on 26/02/2012 at 10:22.
Pushed by dfaure into branch 'KDE/4.8'.

Fix repainting of items when toggling previews off.

The code was only going to update mimetypes whose mimetype wasn't already
known.

Patch tested by Ignat Semenov.

M  +10   -0    kfile/kfilepreviewgenerator.cpp

http://commits.kde.org/kdelibs/76c7ecea3d2cc7c172dd120050fedefcb27651ac