properly handle the m_showPreviews setting in configChanged() and configAccepted()

BUG:294377
FIXED-IN:4.8.1